nav scroll and underline

--- a/index.html
+++ b/index.html
@@ -17,18 +17,11 @@
 <body>
     <nav class="navbar">
         <ul>
-            <a href="#home">
-                <li>Home</li>
-            </a>
-            <a href="#about">
-                <li>About</li>
-            </a>
-            <a href="#projects">
-                <li>Projects</li>
-            </a>
-            <a href="#contact">
-                <li>Contact</li>
-            </a>
+            <li data-sec="home">Home</li>
+            <li data-sec="about">About</li>
+            <li data-sec="projects">Projects</li>
+            <li data-sec="contact">Contact</li>
+            <div class="bar"></div>
         </ul>
     </nav>
     <section class="home-container" id="home">
@@ -286,3 +279,5 @@
 </body>
 
 </html>
+
+<script src="./public/js/index.js"></script>
