clipboard and project img change

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h2 class="title">Projects</h2>
             <div class="project-list">
                 <div class="project">
-                    <img src="./public/imgs/projects/anidisc.PNG" alt="">
+                    <img src="./public/imgs/anidisc/main.png" alt="">
                     <div class="project-info">
                         <h3>AniDisc</h3>
                         <p>A movie X forum like app. Users can search filter animes that they would like to discuss.
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/projects/gashapon.PNG" alt="">
+                    <img src="./public/imgs/gacha/main.png" alt="">
                     <div class="project-info">
                         <h3>Gashapon</h3>
                         <p>A Gacha simulator, similar to a loot box if you are unfamiliar with gacha.
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/projects/daily.PNG" alt="">
+                    <img src="./public/imgs/dailyten/defaulthome.png" alt="">
                     <div class="project-info">
                         <h3>Daily Tenant</h3>
                         <p>A project revolving around Landlords and Tenants. A user can register an account and, on the
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/projects/pokedex.png" alt="">
+                    <img src="./public/imgs/pokedex/main.png" alt="">
                     <div class="project-info">
                         <h3>Pokedex</h3>
                         <p>A pokedex app. Users can search for pokemon by region, types, and name. On click, each
@@ -250,7 +250,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/projects/weather.jpg" alt="">
+                    <img src="./public/imgs/weather/main.png" alt="">
                     <div class="project-info">
                         <h3>Weather</h3>
                         <p>A simple weather app using the ejs template. Users can search for the city that they want the
@@ -292,7 +292,7 @@
                     <path
                         d="M7 40q-1.2 0-2.1-.9Q4 38.2 4 37V11q0-1.2.9-2.1Q5.8 8 7 8h34q1.2 0 2.1.9.9.9.9 2.1v26q0 1.2-.9 2.1-.9.9-2.1.9Zm17-15.1L7 13.75V37h34V13.75Zm0-3L40.8 11H7.25ZM7 13.75V11v26Z" />
                 </svg>
-                andyniwfh@gmail.com
+                <div class="contact-context">andyniwfh@gmail.com</div>
                 <div class="contact-copy">Click to copy</div>
             </div>
         </div>
