some grammar correction

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                     Hello, I'm Andy Ni, a web developer based in New Yok City
                     <br>
                     <br>
-                    My first encounter with web development was during a capstone
-                    class where I was required to build a fullstack web application.
+                    My first encounter with web development was during a computer science
+                    course where I was required to build a fullstack web application.
                     I have never made a web application up to that point, but it was
                     because of this project that I found a deep interest in web
                     development
                     <br>
                     <br>
                     I find enjoyment in learning and incorporating what I learned
-                    into new projects and these projects are also a learning experience on
+                    into new projects with these projects also being a learning experience on
                     what areas to improve upon. One of the things I
                     would like to do next is to build a 3-4 multiplayer chinese poker
                     game with in-house rules.
@@ -129,8 +129,8 @@
                     <img src="./public/imgs/anidisc/main.png" alt="">
                     <div class="project-info">
                         <h3>AniDisc</h3>
-                        <p>A movie X forum like app. Users can search filter animes that they would like to discuss.
-                            Under each anime, they can make a post and other users can comment under these posts. Users
+                        <p>A movie X forum like app. Users can search and filter animes that they would like to discuss.
+                            Under each anime, they can make a post while other users can comment under these posts. Users
                             can
                             also view their own profile or other user's profile by clicking on their profile picture.
                             Home page displays currently airing anime, along with other popular animes.
@@ -165,7 +165,7 @@
                         <p>A Gacha simulator, similar to a loot box if you are unfamiliar with gacha.
                             Currently there is a JSON file of 50 characters from different series. Users can
                             do a 10x summon or a single summon and get characters. There are 3 different rarity
-                            of characters going from 3* to 5* with 5* being the rarest, but there is a pity system
+                            of characters going from 3* to 5* with 5* being the rarest. There is also a pity system
                             implemented
                             so users will eventually get a 5 star if they continue pulling.
                         </p>
@@ -196,11 +196,12 @@
                     <img src="./public/imgs/dailyten/defaulthome.png" alt="">
                     <div class="project-info">
                         <h3>Daily Tenant</h3>
-                        <p>A project revolving around Landlords and Tenants. A user can register an account and, on the
-                            homepage, join a building as a tenant, or create a new building and be the landlord. The
-                            landlord can make new post to inform tenants of anything. Tenants can make a request for
+                        <p>A project revolving around landlords and tenants. A user can register an account or login, which
+                            brings them to the homepage where they can 
+                            join a building as a tenant, or create a new building as a landlord. The
+                            landlord can make new announcement posts to inform their tenants. Tenants can make a request for
                             things like repairs which the landlord can then schedule on their side. The landlord and
-                            tenants can also have a conversation on what to do about the repair.</p>
+                            tenants can also hold a real time conversation on what to do about the repair.</p>
                         <p class="wait">*Deployed to render free tier, may take a bit to load</p>
                         <div class="button-container">
                             <a href="https://github.com/Alan-Y62/Capstone_proj" target="_blank">
@@ -261,10 +262,10 @@
                 <div class="project-info">
                     <h3>Weather</h3>
                     <p>A simple weather app using the ejs template. Users can search for the city that they want the
-                        weather for. Users can switch between Fahrenheit and Celsius and see the forecast for the
+                        weather for. Users can switch between fahrenheit and celsius and see the forecast for the
                         next 5 days. Plans to include a geolocation so that it will automatically display the
                         weather
-                        in the user's current location</p>
+                        of the user's current location</p>
                     <p class="wait">*Deployed to heroku free tier, may take a bit to load</p>
                     <div class="button-container">
                         <a href="https://github.com/Exarr00/Weather" target="_blank">
