small text change

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                             also view their own profile or other user's profile by clicking on their profile picture.
                             Home page displays currently airing anime, along with other popular animes.
                         </p>
+                        <p class="wait">*Backend deployed to render free tier, data may take a bit to load</p>
                         <div class="button-container">
                             <a href="https://github.com/Exar-s/Anidisc" target="_blank">
                                 <button class="button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
