nav underline color change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="home-wrapper">
             <div>
                 <h1>Andy Ni</h1>
-                <h2>Web Developer</h2>
+                <h2>Software Developer</h2>
             </div>
             <div class="home-img">
                 <div class="home-img-wrapper">
@@ -54,21 +54,19 @@
             <h2 class="title">About</h2>
             <div class="about">
                 <div class="about-text">
-                    Hello, I'm Andy Ni, a web developer based in New Yok City
+                    Hello, I'm Andy Ni, a software developer based in New Yok City
                     <br>
                     <br>
-                    My first encounter with web development was during a computer science
-                    course where I was required to build a fullstack web application.
-                    I have never made a web application up to that point, but it was
-                    because of this project that I found a deep interest in web
-                    development
-                    <br>
-                    <br>
-                    I find enjoyment in learning and incorporating what I learned
+                    I was introduced to programming at Hunter college, with my first language
+                    being Python. I find enjoyment in learning and incorporating what I learned
                     into new projects with these projects also being a learning experience on
-                    what areas to improve upon. One of the things I
-                    would like to do next is to build a 3-4 multiplayer chinese poker
-                    game with in-house rules.
+                    what areas to improve upon. 
+                    <br>
+                    <br>
+                    I am currently learning Typescript and building a small real time chat 
+                    application. Some of my short-term goals are to learn more about CI/CD, Containers, 
+                    along with getting back into Python to automate certain things.
+                   
                 </div>
                 <div class="about-tools">
                     <div class="tools-group">
