--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./public/imgs/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./public/imgs/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./public/css/index.css">
     <link rel="stylesheet" href="./public/css/nav.css">
     <link rel="stylesheet" href="./public/css/about.css">
@@ -57,15 +59,13 @@
                     Hello, I'm Andy Ni, a software developer based in New Yok City
                     <br>
                     <br>
-                    I was introduced to programming at Hunter college, with my first language
-                    being Python. I find enjoyment in learning and incorporating what I learned
-                    into new projects with these projects also being a learning experience on
-                    what areas to improve upon. 
+                    I was introduced to programming at Hunter college, where I mostly
+                    used python and C++. Currently I am mainly focusing on web development.
                     <br>
                     <br>
-                    I am currently learning Typescript and building a small real time chat 
-                    application. Some of my short-term goals are to learn more about CI/CD, Containers, 
-                    along with getting back into Python to automate certain things.
+                    I find enjoyment in learning and incorporating what 
+                    I learned into new projects. These projects are also a good way to find out
+                    what areas I can improve upon.
                    
                 </div>
                 <div class="about-tools">
@@ -133,7 +133,6 @@
                             also view their own profile or other user's profile by clicking on their profile picture.
                             Home page displays currently airing anime, along with other popular animes.
                         </p>
-                        <p class="wait">*Backend deployed to render free tier, data may take a bit to load</p>
                         <div class="button-container">
                             <a href="https://github.com/Exar-s/Anidisc" target="_blank">
                                 <button class="button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -265,7 +264,7 @@
                         next 5 days. Plans to include a geolocation so that it will automatically display the
                         weather
                         of the user's current location</p>
-                    <p class="wait">*Deployed to heroku free tier, may take a bit to load</p>
+                    <p class="wait">*Deployed to render free tier, may take a bit to load</p>
                     <div class="button-container">
                         <a href="https://github.com/Exarr00/Weather" target="_blank">
                             <button class="button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -274,7 +273,7 @@
                                         d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-4.466 19.59c-.405.078-.534-.171-.534-.384v-2.195c0-.747-.262-1.233-.55-1.481 1.782-.198 3.654-.875 3.654-3.947 0-.874-.312-1.588-.823-2.147.082-.202.356-1.016-.079-2.117 0 0-.671-.215-2.198.82-.64-.18-1.324-.267-2.004-.271-.68.003-1.364.091-2.003.269-1.528-1.035-2.2-.82-2.2-.82-.434 1.102-.16 1.915-.077 2.118-.512.56-.824 1.273-.824 2.147 0 3.064 1.867 3.751 3.645 3.954-.229.2-.436.552-.508 1.07-.457.204-1.614.557-2.328-.666 0 0-.423-.768-1.227-.825 0 0-.78-.01-.055.487 0 0 .525.246.889 1.17 0 0 .463 1.428 2.688.944v1.489c0 .211-.129.459-.528.385-3.18-1.057-5.472-4.056-5.472-7.59 0-4.419 3.582-8 8-8s8 3.581 8 8c0 3.533-2.289 6.531-5.466 7.59z" />
                                 </svg>Code</button>
                         </a>
-                        <a href="https://tianqiweather.herokuapp.com/" target="_blank">
+                        <a href="https://tianqiweather.onrender.com/" target="_blank">
                             <button class="button"><svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"
                                     viewBox="0 0 48 48" fill="#FFFFFF">
                                     <path
@@ -305,6 +304,9 @@
             </div>
         </div>
     </section>
+    <footer>
+       <div>Copyright &copy; Andy Ni 2023</div> 
+    </footer>
     <div class="modal-container">
         <div class="modal">
             <div class="modal-header">
