Small design changes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <span></span>
         <div class="home-wrapper">
             <div>
-                <h1>Andy Ni</h1>
-                <h2>Software Developer</h2>
+                <h1>Hello!</h1>
+                <h2>I'm Andy Ni</h2>
             </div>
             <div class="home-img">
                 <div class="home-img-wrapper">
@@ -56,63 +56,51 @@
             <h2 class="title">About</h2>
             <div class="about">
                 <div class="about-text">
-                    Hello, I'm Andy Ni, a software developer based in New Yok City
+                    Hello, I'm Andy Ni. I graduated from Hunter College, and I'm 
+                    currently based in New York City  
                     <br>
                     <br>
-                    I was introduced to programming at Hunter college, where I mostly
-                    used python and C++. Currently I am mainly focusing on web development.
+                    I studied computer science while in college where I learned programming
+                    languages such as C++ and Python. Currently I've been finding enjoyment in learning new things 
+                    and incorporating what I learned into new projects.
                     <br>
                     <br>
-                    I find enjoyment in learning and incorporating what 
-                    I learned into new projects. These projects are also a good way to find out
-                    what areas I can improve upon.
-                   
+                    Here are some of the tools I have worked with:
+
                 </div>
                 <div class="about-tools">
                     <div class="tools-group">
                         <div class="tool">
-                            <img src="./public/imgs/html5.png" alt="">
-                            <p>HTML5</p>
+                            <img src="./public/imgs//tools/python.png" alt="">
+                            <p>Python</p>
                         </div>
                         <div class="tool">
-                            <img src="./public/imgs/css3.png" alt="">
-                            <p>CSS3</p>
-                        </div>
-                        <div class="tool">
-                            <img src="./public/imgs/js.png" alt="">
+                            <img src="./public/imgs/tools/js.png" alt="">
                             <p>JavaScript</p>
                         </div>
                     </div>
                     <div class="tools-group">
                         <div class="tool">
-                            <img src="./public/imgs/react.png" alt="">
-                            <p>React</p>
+                            <img src="./public/imgs/tools/sql.png" alt="">
+                            <p>SQL</p>
                         </div>
                         <div class="tool">
-                            <img src="./public/imgs//express.png" alt="">
-                            <p>Express</p>
+                            <img src="./public/imgs/tools/mongodb.png" alt="">
+                            <p>MongoDB</p>
                         </div>
                         <div class="tool">
-                            <img src="./public/imgs/nodejs.png" alt="">
-                            <p>Node.js</p>
-                        </div>
-                        <div class="tool">
-                            <img src="./public/imgs/npm.png" alt="">
-                            <p>NPM</p>
+                            <img src="./public/imgs/tools/excel.png" alt="">
+                            <p>Excel</p>
                         </div>
                     </div>
                     <div class="tools-group">
                         <div class="tool">
-                            <img src="./public/imgs/git.png" alt="">
-                            <p>Git</p>
+                            <img src="./public/imgs/tools/react.png" alt="">
+                            <p>React</p>
                         </div>
                         <div class="tool">
-                            <img src="./public/imgs/sql.png" alt="">
-                            <p>SQL</p>
-                        </div>
-                        <div class="tool">
-                            <img src="./public/imgs/mongodb.png" alt="">
-                            <p>MongoDB</p>
+                            <img src="./public/imgs/tools/nodejs.png" alt="">
+                            <p>Node.js</p>
                         </div>
                     </div>
                 </div>
