img to webp and slow internet quick fix

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h2 class="title">Projects</h2>
             <div class="project-list">
                 <div class="project">
-                    <img src="./public/imgs/anidisc/main.png" alt="">
+                    <img src="./public/imgs/anidisc/main.webp" alt="">
                     <div class="project-info">
                         <h3>AniDisc</h3>
                         <p>A movie X forum like app. Users can search and filter animes that they would like to discuss.
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/gacha/main.png" alt="">
+                    <img src="./public/imgs/gacha/main.webp" alt="">
                     <div class="project-info">
                         <h3>Gashapon</h3>
                         <p>A Gacha simulator, similar to a loot box if you are unfamiliar with gacha.
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/dailyten/defaulthome.png" alt="">
+                    <img src="./public/imgs/dailyten/defaulthome.webp" alt="">
                     <div class="project-info">
                         <h3>Daily Tenant</h3>
                         <p>A project revolving around landlords and tenants. A user can register an account or login, which
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./public/imgs/pokedex/main.png" alt="">
+                    <img src="./public/imgs/pokedex/main.webp" alt="">
                     <div class="project-info">
                         <h3>Pokedex</h3>
                         <p>A pokedex app. Users can search for pokemon by region, types, and name. On click, each
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <div class="project">
-                <img src="./public/imgs/weather/main.png" alt="">
+                <img src="./public/imgs/weather/main.webp" alt="">
                 <div class="project-info">
                     <h3>Weather</h3>
                     <p>A simple weather app using the ejs template. Users can search for the city that they want the
